Add logic for panama openssl-java17